# trnscrb

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: index.html
tests/: test_analytics_bookmarks.py  test_app_bundle.py  test_attribution.py  test_audio_preservation.py  test_capture_helper.py  test_cli_commands.py  test_cli_enrich.py  test_cli_tools.py  test_crash_recovery.py  test_diarizer_pipeline.py  test_enricher.py  test_enricher_new.py  test_mlx_memory.py  test_note_integration.py  test_recorder_streaming.py  test_settings.py  test_single_instance.py  test_speaker_names_health.py  test_transcriber.py  test_watcher.py  test_watcher_desync.py  test_watcher_detection.py
trnscrb/: __init__.py  analytics.py  app_bundle.py  app_icon.py  attribution.py  calendar_integration.py  cli.py  diarizer.py  enricher.py  icon.py  log.py  mcp_server.py  menu_bar.py  recorder.py  sck_helper.py  settings.py  single_instance.py  storage.py  system_audio.py  transcriber.py  watcher.py
trnscrb/helper/: sck_capture.swift  trnscrb_app.swift.in
