[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trnscrb"
version = "0.6.0"
description = "Offline meeting transcription for macOS — auto-detects meetings, transcribes locally with Parakeet or Whisper, saves to Claude Desktop via MCP"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Ajay Ram", email = "ajayrmk@gmail.com"}]
requires-python = ">=3.12"
keywords = ["transcription", "meeting", "parakeet", "whisper", "macos", "mcp", "claude", "offline", "diarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1",
    "mcp>=1.0.0",
    "click>=8.1",
    "anthropic>=0.25",
    "scipy>=1.11",
    "parakeet-mlx>=0.5.1",
    "openai>=2.24.0",
]

[project.urls]
Homepage = "https://github.com/artback/trnscrb"
Repository = "https://github.com/artback/trnscrb"
"Bug Tracker" = "https://github.com/artback/trnscrb/issues"

[project.scripts]
trnscrb = "trnscrb.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["trnscrb*"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# AppleScript literals and prompt templates exceed 100 chars — breaking them harms readability
"trnscrb/watcher.py" = ["E501"]
"trnscrb/calendar_integration.py" = ["E501"]
"trnscrb/enricher.py" = ["E501"]
"trnscrb/mcp_server.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
