[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trnscrb"
version = "0.17.1"
description = "Offline meeting transcription for macOS — auto-detects meetings, transcribes locally with Parakeet or Whisper, saves to Claude Desktop via MCP"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Ajay Ram", email = "ajayrmk@gmail.com"}]
requires-python = ">=3.12"
keywords = ["transcription", "meeting", "parakeet", "whisper", "macos", "mcp", "claude", "offline", "diarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1",
    "mcp>=1.0.0",
    "click>=8.1",
    "anthropic>=0.25",
    "scipy>=1.11",
    "parakeet-mlx>=0.5.1",
    "mlx-qwen3-asr>=0.3.5",
    # Transitive (librosa→numba) resolution guard: without a floor, resolvers
    # keep the newest numpy and backtrack numba to ancient sdists that cannot
    # build on Python 3.12+ (numba<=0.53 has no numpy cap in its metadata).
    "numba>=0.61",
    # App icon + menu-bar icon rendering (was only transitive via pyannote)
    "pillow>=10",
    "openai>=2.24.0",
    "pyobjc-framework-ScreenCaptureKit>=10.3",
    "pyobjc-framework-CoreMedia>=10.3",
    "pyobjc-framework-Quartz>=10.3",
    "pyobjc-framework-libdispatch>=10.3",
]

[project.urls]
Homepage = "https://github.com/artback/trnscrb"
Repository = "https://github.com/artback/trnscrb"
"Bug Tracker" = "https://github.com/artback/trnscrb/issues"

[project.scripts]
trnscrb = "trnscrb.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["trnscrb*"]

[tool.ruff]
# Must match requires-python: with py314 the formatter emits PEP 758 except
# syntax that is a SyntaxError on the Python 3.12 the Homebrew build runs.
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# AppleScript literals and prompt templates exceed 100 chars — breaking them harms readability
"trnscrb/watcher.py" = ["E501"]
"trnscrb/calendar_integration.py" = ["E501"]
"trnscrb/enricher.py" = ["E501"]
"trnscrb/mcp_server.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
